Fixed content jumping issue with sticky navbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -2,9 +2,6 @@
     padding: 3px;
 }
 
-
-
-
 .main-nav .navbar-toggle {
   border: 0;
   background-color: rgba(0,0,0,.2);
@@ -26,10 +23,17 @@
   border: 0;
 }
 
-
-
 .navbar-collapse {
     padding-right: 0;
+}
+
+.no-jump {
+    height: 80px;
+}
+
+
+#services {
+    padding-top: 40px;
 }
 
 .twitter-info p{
