--- a/css/main.css
+++ b/css/main.css
@@ -295,10 +295,14 @@ section {
   border-radius: 4px;
   color: #fff;
   display: inline-block;
-  font-size: 36px;
+  /*font-size: 36px;
   height: 80px;
   line-height: 80px;
-  width: 80px;
+  width: 80px;*/
+  font-size: 30px;
+  height: 70px;
+  line-height: 70px;
+  width: 70px;
   -webkit-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
 }
@@ -359,7 +363,7 @@ section {
 **************************/
 #about-us {
   background-image: url(../images/about-bg.jpg);
-  padding: 60px 0;
+  /*padding: 60px 0;*/
 }
 
 #about-us h2 {
